--- a/14_strain_DE/m2_tseq_MAST_DE_comprsn.Rmd
+++ b/14_strain_DE/m2_tseq_MAST_DE_comprsn.Rmd
@@ -90,7 +90,12 @@ knitr::opts_knit$set(root.dir = paste0("/lustre/scratch126/tol/teams/lawniczak/u
 source("../multipurpose_scripts_lnk/seurat_sce/seu_sce_common_fns.R")
 source("../multipurpose_scripts_lnk/plotting_common_fns.R")
 source("/nfs/users/nfs_j/jr35/Mali2/mali22_code/pf_common_vars.R")
-source("/nfs/users/nfs_j/jr35/Mali2/mali22_code/strain_DE/strain_DE_common_fns.R")
+source("/nfs/users/nfs_j/jr35/Mali2/mali22_code/14_strain_DE/strain_DE_common_fns.R")
+```
+
+```{r}
+# read_dir <- "data/processed/Pf/m2_all/strain_DE/"
+save_dir <- "data/processed/Pf/m2_all/strain_DE/"
 ```
 
 
@@ -131,7 +136,9 @@ for (nm in names(asex_bal_ts_cond_renamed)) {
 ```
 
 ```{r}
-cond_gns_de_asx <- readRDS('data/processed/Pf/cond_gns_de_asx.RDS')
+# cond_gns_de_asx <- readRDS('data/processed/Pf/cond_gns_de_asx.RDS')
+cond_gns_de_asx <- readRDS(paste0(save_dir, 'cond_gns_de_asx.RDS'))
+
 ```
 
 ```{r, message=FALSE, warning=FALSE}
@@ -264,7 +271,7 @@ mast_tde_corr_tbls <- map(mast_tde_corr_tbls_w_na,  ~.x %>% filter(!is.na(waldSt
 
 
 ```{r}
-saveRDS(mast_tde_corr_tbls, "data/processed/Pf/m2_all/strain_DE/mast_tde_corr_tbls.RDS")
+saveRDS(mast_tde_corr_tbls, paste0(save_dir, "mast_tde_corr_tbls.RDS"))
 
 ```
 
@@ -280,7 +287,7 @@ map(mast_tde_corr_tbls, ~.x |> filter(p_val_adj < 0.05 & waldStat>10) |> pull(ge
 ```
 
 ```{r, eval=TRUE}
-saveRDS(mast_tde_corr_tbls, "data/processed/Pf/m2_all/strain_DE/mast_tde_corr_tbls.RDS")
+# saveRDS(mast_tde_corr_tbls, "data/processed/Pf/m2_all/strain_DE/mast_tde_corr_tbls.RDS")
 
 ```
 
@@ -396,12 +403,12 @@ de_corr_plts
 
 overlap in genes upregulated in second strain versus the first
 Asexual
-```{r, fig.width= 8, fig.height=3}
+```{r, fig.width= 8, fig.height=3, eval=FALSE}
 
 # strns_comps =  c('SC1_vs_SC2', 'SC2_vs_SC3', 'SC2_vs_SC6', 'SC1_vs_SC3')
 # strns_comps =  c("SC1_vs_SC2", "SC1_vs_SC3", "SC1_vs_SC6", "SC2_vs_SC3", "SC2_vs_SC6", "SC3_vs_SC6")
 
-list(asx_pairwise_mkrs_seu_clustr_sst[1]) %>%
+list(asx_pairwise_mkrs_seu_clustr_sst[2]) %>%
   pmap(., ~{
     mast_de_tbl = ..1 %>% filter(p_val_adj < 0.05) %>% arrange(p_val_adj)
     strns_comps = mast_de_tbl %>% pull(pw_comparison) %>% unique()
@@ -513,8 +520,8 @@ gn_tble_gg_smoother_data <- list(msc_g_noLE_v3_combi_afm_seu_sst, pts_sst) %>%
 ```
 
 ```{r, results='asis', warning=F, message=F}
-saveRDS(gn_tble_gg_smoother, "data/processed/Pf/m2_all/strain_DE/gn_tble_gg_smoother.RDS")
-saveRDS(gn_tble_gg_smoother_data, "data/processed/Pf/m2_all/strain_DE/gn_tble_gg_smoother_data.RDS")
+saveRDS(gn_tble_gg_smoother, paste0(save_dir, "gn_tble_gg_smoother.RDS"))
+saveRDS(gn_tble_gg_smoother_data, paste0(save_dir, "gn_tble_gg_smoother_data.RDS"))
 
 ```
 
