--- a/14_strain_DE/afm_tseq_MAST_DE_comprsn.Rmd
+++ b/14_strain_DE/afm_tseq_MAST_DE_comprsn.Rmd
@@ -79,12 +79,17 @@ sample_set = "Mali2"
 knitr::opts_knit$set(root.dir = paste0("/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/", sample_set))
 ```
 
+```{r}
+read_dir <- "data/processed/Pf/m2_all/strain_DE_fm/"
+save_dir <- "data/processed/Pf/m2_all/strain_DE_fm/"
+```
+
 
 #  integration of all MSC
 
 ### Common functions
 
-#### Source commong functions, varriables and tables
+#### Source common functions, varriables and tables
 ```{r}
 ##Boxplot labeling function
 source("../multipurpose_scripts_lnk/seurat_sce/seu_sce_common_fns.R")
@@ -93,73 +98,90 @@ source("/nfs/users/nfs_j/jr35/Mali2/mali22_code/pf_common_vars.R")
 source("/nfs/users/nfs_j/jr35/Mali2/mali22_code/14_strain_DE/strain_DE_common_fns.R")
 ```
 
-```{r}
-# read_dir <- "data/processed/Pf/m2_all/strain_DE/"
-save_dir <- "data/processed/Pf/m2_all/strain_DE/"
-```
-
 
 ```{r, message=FALSE, warning=FALSE}
-asx_pairwise_mkrs_seu_clustr<- readRDS('data/processed/Pf/m2_all/asx_pairwise_mkrs_seu_clustr3.RDS')
-
+fm_pairwise_mkrs_seu_clustr <- readRDS(paste0(read_dir, 'fm_pairwise_mkrs_seu_clustr.RDS'))
 ```
 
 
 ```{r, warning=FALSE, message=FALSE}
-asx_pairwise_mkrs_seu_clustr_anot <- map(asx_pairwise_mkrs_seu_clustr, ~.x %>%  left_join(., Pf3D7_genes_plasmoDB[,c("gene_id", "Gene")]))
+fm_pairwise_mkrs_seu_clustr_anot <- map(fm_pairwise_mkrs_seu_clustr, ~.x %>%  left_join(., Pf3D7_genes_plasmoDB[,c("gene_id", "Gene")]))
 
-asx_pairwise_mkrs_seu_clustr_anot
+fm_pairwise_mkrs_seu_clustr_anot
 ```
 
 ```{r, results='asis', warning=F, message=F}
-solo_don <- c("MSC33C", "MSC49C", "MSC50_SLOC", "MSC60C", "MSC66C", "MSC68C")
+# solo_don <- c("MSC33C", "MSC49C", "MSC50_SLOC", "MSC60C", "MSC66C", "MSC68C")
 
 ```
 
-Read in tradeseq files from local
-```{r}
-asex_bal_ts <- list.files('data/processed/Pf', pattern = "m2_asex_bal_ts.RDS$", full.names = T, recursive = T, include.dirs = T) %>% 
-  set_names(nm = (str_remove_all(.,'data/processed/Pf/|/tradeseq.*'))) %>%
-  .[solo_don] %>%
+```{r, message=F, warning=F, eval=T}
+## Get file list
+fm_bal_ts_files <- Sys.glob("data/processed/Pf/*/tradeseq_fm/*fm_bal_ts.RDS")
+fm_bal_ts_files
+```
+
+```{r, message=F, warning=F, eval=T}
+## read filtered barcodes
+fm_bal_ts <- map(fm_bal_ts_files, ~.x %>% 
+  set_names(nm = (str_remove_all(.,'data/processed/Pf/|tradeseq_fm/|\\._fm_.*') %>% 
+                    gsub("(.*)/(.*)", "\\2/\\1", .) %>% 
+                    str_replace(., "/", ".")))) %>% 
+  unlist(., recursive = F) %>% 
+  # .[solo_don] %>%
   map(readRDS)
-
 ```
 
 ```{r}
-asex_bal_ts_cond_renamed <- asex_bal_ts
+fm_bal_ts_cond_renamed <- fm_bal_ts
 ```
 
 ```{r, warning=FALSE, message=FALSE}
-for (nm in names(asex_bal_ts_cond_renamed)) {
-  asex_bal_ts_cond_renamed[[nm]]$tradeSeq$conditions<- droplevels(factor(str_remove(asex_bal_ts[[nm]]$tradeSeq$conditions, "M[0-9]+_"), levels = strain_nms_lvls))
+for (nm in names(fm_bal_ts_cond_renamed)) {
+  fm_bal_ts_cond_renamed[[nm]]$tradeSeq$conditions<- droplevels(factor(str_remove(fm_bal_ts[[nm]]$tradeSeq$conditions, "M[0-9]+_"), levels = strain_nms_lvls))
 }
 ```
 
 ```{r}
-# cond_gns_de_asx <- readRDS('data/processed/Pf/cond_gns_de_asx.RDS')
-cond_gns_de_asx <- readRDS(paste0(save_dir, 'cond_gns_de_asx.RDS'))
+cond_gns_de_fm <- readRDS(paste0(save_dir, 'cond_gns_de_fm.RDS'))
 
 ```
 
 ```{r, message=FALSE, warning=FALSE}
-asx_m2_bal_mast <- readRDS('data/processed/Pf/m2_all/asx_m2_bal_mast3.RDS')
+fm_m2_bal_mast <- readRDS(paste0(save_dir, 'fm_m2_bal_mast.RDS'))
 
 ```
 
 ```{r, message=FALSE, warning=FALSE}
-asx_m2_bal_mast <- readRDS('data/processed/Pf/m2_all/asx_m2_bal_mast3.RDS')
+# fm_m2_bal_mast <- readRDS('data/processed/Pf/m2_all/fm_m2_bal_mast3.RDS')
 pts <- c("slingPseudotime_1")
 ```
+
+## !!! NOTE - DISPARITY BETWEEN MAST AND TRADESEQ - 
+some samples drop out in tradeseq - find out why
+
+```{r, fig.width= 8, fig.height=3, warning=FALSE}
+names(fm_pairwise_mkrs_seu_clustr)
+names(cond_gns_de_fm)
+
+## donor stage groups not shared in both
+base::setdiff(names(fm_pairwise_mkrs_seu_clustr), names(cond_gns_de_fm))
+
+## Save shared donor stage groups
+dons_in_tseq_n_mast <- base::intersect(names(cond_gns_de_fm), names(fm_pairwise_mkrs_seu_clustr))
+
+```
+
 
 
 ```{r}
 ##!!!!!NOTE - remove the empty MSC1_fle
-# asx_pairwise_mkrs_seu_clustr_sst <- asx_pairwise_mkrs_seu_clustr[c(1:5, 7:20)]
+# fm_pairwise_mkrs_seu_clustr_sst <- fm_pairwise_mkrs_seu_clustr[c(1:5, 7:20)]
 # msc_g_noLE_v3_combi_afm_seu_sst <- msc_g_noLE_v3_combi_afm_seu[c(1:5,7:20)]
-asx_pairwise_mkrs_seu_clustr_sst <- asx_pairwise_mkrs_seu_clustr
-msc_g_noLE_v3_combi_afm_seu_sst <- asx_m2_bal_mast
-msc_g_noLE_ref_ts_sce_ub_de <- asex_bal_ts_cond_renamed
-cond_gns_005_ub_de_sst <- cond_gns_de_asx
+fm_pairwise_mkrs_seu_clustr_sst <- fm_pairwise_mkrs_seu_clustr[dons_in_tseq_n_mast]
+msc_g_noLE_v3_combi_afm_seu_sst <- fm_m2_bal_mast[dons_in_tseq_n_mast]
+msc_g_noLE_ref_ts_sce_ub_de <- fm_bal_ts_cond_renamed[dons_in_tseq_n_mast]
+cond_gns_005_ub_de_sst <- cond_gns_de_fm[dons_in_tseq_n_mast]
 pts_sst <- pts
 
 ```
@@ -169,13 +191,13 @@ pts_sst <- pts
 List genes expressed in less than 5 cells in each subset objects used as MAST input that were also removed when running tradeseq fitGAM
 
 ```{r}
-map2(asx_pairwise_mkrs_seu_clustr_sst, msc_g_noLE_v3_combi_afm_seu_sst, ~.x %>% filter(gene_id %in% rownames(.y)[!(rowSums(.y@assays$RNA@layers$counts != 0) > 5)])) %>% bind_rows(., .id = 'Don')
+map2(fm_pairwise_mkrs_seu_clustr_sst, msc_g_noLE_v3_combi_afm_seu_sst, ~.x %>% filter(gene_id %in% rownames(.y)[!(rowSums(.y@assays$RNA@layers$counts != 0) > 5)])) %>% bind_rows(., .id = 'Don')
 
 ```
 
 Remove genes above ????NB NB - refer line 734
 ```{r}
-asx_pairwise_mkrs_seu_clustr_sst <- map2(asx_pairwise_mkrs_seu_clustr_sst, msc_g_noLE_v3_combi_afm_seu_sst, ~.x %>% filter(gene_id %in% rownames(.y)[(rowSums(.y@assays$RNA@layers$counts != 0) > 5)]))
+fm_pairwise_mkrs_seu_clustr_sst <- map2(fm_pairwise_mkrs_seu_clustr_sst, msc_g_noLE_v3_combi_afm_seu_sst, ~.x %>% filter(gene_id %in% rownames(.y)[(rowSums(.y@assays$RNA@layers$counts != 0) > 5)]))
 
 ```
 
@@ -184,7 +206,7 @@ asx_pairwise_mkrs_seu_clustr_sst <- map2(asx_pairwise_mkrs_seu_clustr_sst, msc_g
 
 ```{r, fig.width= 8, fig.height=3, warning=FALSE}
 ## check the pairwise comparisons that are captured in MAST
-map(asx_pairwise_mkrs_seu_clustr_sst, ~.x %>% count(pw_comparison))
+map(fm_pairwise_mkrs_seu_clustr_sst, ~.x %>% count(pw_comparison))
 
 ```
 
@@ -220,10 +242,9 @@ Duplicate the tradeseq formated results since some pairwise comparisons name pai
 #   })
 ```
 
-
 Merge MAST results with tde results so as to use cut-off accounting for both methods (P<0.05 MAST & waldstat >10 TDE)
 ```{r, fig.width= 8, fig.height=3, warning=FALSE}
-mast_tde_corr_tbls_w_na <- list(cond_gns_005_ub_de_sst_formated, asx_pairwise_mkrs_seu_clustr_sst) %>%
+mast_tde_corr_tbls_w_na <- list(cond_gns_005_ub_de_sst_formated, fm_pairwise_mkrs_seu_clustr_sst) %>%
     pmap(
       ~..1 %>% full_join(..2 %>% mutate(mast = "yes"), ., by = c('gene_id', 'pw_comparison'='pw_comparison')) 
     )
@@ -287,7 +308,7 @@ map(mast_tde_corr_tbls, ~.x |> filter(p_val_adj < 0.05 & waldStat>10) |> pull(ge
 ```
 
 ```{r, eval=TRUE}
-# saveRDS(mast_tde_corr_tbls, "data/processed/Pf/m2_all/strain_DE/mast_tde_corr_tbls.RDS")
+saveRDS(mast_tde_corr_tbls, paste0(save_dir, "mast_tde_corr_tbls.RDS"))
 
 ```
 
@@ -322,7 +343,7 @@ names(mast_tde_de_export) <- str_replace_all(str_remove(names(mast_tde_de_export
 # createWorksheet(mast_tde_de_export[c(1,3:5)], "../Mali/v3_science_manuscript/tables/fvl_mast_tde_de_export.xlsx") 
 
 ## Write out field versus lab and powered separate field and separate lab as RDS so as to include the GO analysis
-saveRDS(mast_tde_de_export[c(1:8, 25:28)], "../Mali/v3_science_manuscript/tables/fvl_n_powered_mast_tde_de_export.RDS")
+saveRDS(mast_tde_de_export[c(1:8, 25:28)], paste0(save_dir, "fvl_n_powered_mast_tde_de_export.RDS"))
   
 ##Get weak powered analysis
 mast_tde_de_export_wk <- mast_tde_de_export[c(17:19,21:24)]
@@ -408,7 +429,7 @@ Asexual
 # strns_comps =  c('SC1_vs_SC2', 'SC2_vs_SC3', 'SC2_vs_SC6', 'SC1_vs_SC3')
 # strns_comps =  c("SC1_vs_SC2", "SC1_vs_SC3", "SC1_vs_SC6", "SC2_vs_SC3", "SC2_vs_SC6", "SC3_vs_SC6")
 
-list(asx_pairwise_mkrs_seu_clustr_sst[2]) %>%
+list(fm_pairwise_mkrs_seu_clustr_sst[2]) %>%
   pmap(., ~{
     mast_de_tbl = ..1 %>% filter(p_val_adj < 0.05) %>% arrange(p_val_adj)
     strns_comps = mast_de_tbl %>% pull(pw_comparison) %>% unique()
@@ -425,7 +446,7 @@ list(asx_pairwise_mkrs_seu_clustr_sst[2]) %>%
 UpSet plot
 ```{r}
 ## Get relevant strain comparisons and arrange appropriately
-strns_comps_w_lab =  map(asx_pairwise_mkrs_seu_clustr_sst, ~unique(.$pw_comparison)) %>% unlist() %>% unique() 
+strns_comps_w_lab =  map(fm_pairwise_mkrs_seu_clustr_sst, ~unique(.$pw_comparison)) %>% unlist() %>% unique() 
 strns_comps_w_lab =  c(sort(strns_comps_w_lab[!(strns_comps_w_lab %in% c("NF54_vs_7G8","NF54_vs_NF54_A", "7G8_vs_NF54_A","Field_vs_Lab"))]), c("NF54_vs_7G8","NF54_vs_NF54_A", "7G8_vs_NF54_A","Field_vs_Lab"))
 ## Remove donor strain VS field comparison
 strns_comps =  strns_comps_w_lab[!(str_detect(strns_comps_w_lab, ".*SC[0-9]*_vs_[NF54_A$|NF54$|7G8$]") | str_detect(strns_comps_w_lab, ".*vs_NF54_A"))]
@@ -433,7 +454,7 @@ strns_comps =  strns_comps_w_lab[!(str_detect(strns_comps_w_lab, ".*SC[0-9]*_vs_
 ```
 
 ```{r, eval=FALSE}
-list(asx_pairwise_mkrs_seu_clustr_sst[10]) %>%
+list(fm_pairwise_mkrs_seu_clustr_sst[10]) %>%
   pmap(., ~{
     mast_de_tbl = ..1
     map(strns_comps, ~ mast_de_tbl %>% 
@@ -451,7 +472,7 @@ list(asx_pairwise_mkrs_seu_clustr_sst[10]) %>%
 # strns_comps =  c('SC2_vs_SC5', 'SC2_vs_SC7', 'SC5_vs_SC7')
 # strns_comps =  c("SC2_vs_SC4", "SC2_vs_SC5", "SC2_vs_SC6", "SC2_vs_SC7", "SC4_vs_SC5", "SC4_vs_SC6", "SC4_vs_SC7", "SC5_vs_SC6", "SC5_vs_SC7", "SC6_vs_SC7" )
 
-list(asx_pairwise_mkrs_seu_clustr_sst[c(1)]) %>%
+list(fm_pairwise_mkrs_seu_clustr_sst[c(1)]) %>%
   pmap(., possibly( ~{
     mast_de_tbl = ..1 %>% filter(p_val_adj < 0.05) %>% arrange(p_val_adj)
     strns_comps = mast_de_tbl %>% pull(pw_comparison) %>% unique()
@@ -469,7 +490,7 @@ list(asx_pairwise_mkrs_seu_clustr_sst[c(1)]) %>%
 
 UpSet plot
 ```{r, eval=FALSE}
-list(asx_pairwise_mkrs_seu_clustr_sst[c(1)]) %>%
+list(fm_pairwise_mkrs_seu_clustr_sst[c(1)]) %>%
   pmap(., ~{
     mast_de_tbl = ..1
     map(strns_comps, ~ mast_de_tbl %>% 
@@ -631,7 +652,7 @@ Table of genes significatnt in MAST (adjusted P < 0.05) but not in tradeseq (wal
 
 ##MASt signal is in ok ie pvalue less than 0.0001 - TDE signal too low i.e waldstat <10
 
-tde_disparities <- list(mast_tde_corr_tbls, asx_pairwise_mkrs_seu_clustr_sst) %>%
+tde_disparities <- list(mast_tde_corr_tbls, fm_pairwise_mkrs_seu_clustr_sst) %>%
   pmap(
     ~..1 %>%
       filter(!str_detect(pw_comparison, 'SC._vs_Lab')) %>%
@@ -661,7 +682,7 @@ tde_disparities_gns_plts <- stg_strn_mast_gns_smooth_plts(gn_xprsn_tbls = gn_tbl
                                                                            filter(p_val_adj < 0.05) %>%
                                                                            # arrange(desc(waldStat)) %>% 
                                                                            dplyr::select(gene_id, pw_comparison)), 
-                                                          stage_nms = names(asx_pairwise_mkrs_seu_clustr_sst), 
+                                                          stage_nms = names(fm_pairwise_mkrs_seu_clustr_sst), 
                                                           ptimes = pts_sst,
                                                           comp_g = 'pw_comparison',
                                                           top_gns = 8,
@@ -686,7 +707,7 @@ Genes significatnt in  tradeseq (waldStat > 10) but not in  MAST (adjusted P > 0
 ```{r, fig.width= 8, fig.height=3}
 ##TDE signal is in check - MAST signal too low
 
-mast_disparities <- list(mast_tde_corr_tbls, asx_pairwise_mkrs_seu_clustr_sst) %>%
+mast_disparities <- list(mast_tde_corr_tbls, fm_pairwise_mkrs_seu_clustr_sst) %>%
   pmap(
     ~..1 %>%
       filter(!str_detect(pw_comparison, 'SC._vs_Lab')) %>%
@@ -770,7 +791,7 @@ mast_disparities_gns_plts <- stg_strn_mast_gns_smooth_plts(gn_xprsn_tbls = gn_tb
                                                                             # filter(p_val_adj < 0.9) %>%
                                                                             arrange(desc(waldStat)) %>% 
                                                                             dplyr::select(gene_id, pw_comparison)), 
-                                                           stage_nms = names(asx_pairwise_mkrs_seu_clustr_sst), 
+                                                           stage_nms = names(fm_pairwise_mkrs_seu_clustr_sst), 
                                                            ptimes = pts_sst,
                                                            comp_g = 'pw_comparison',
                                                            top_gns = 10)
@@ -795,7 +816,7 @@ top_tde_mast_sig_gns_plts <-stg_strn_mast_gns_smooth_plts(gn_xprsn_tbls = gn_tbl
                                                                            filter(!str_detect(pw_comparison, 'SC._vs_Lab')) %>%
                                                                            arrange(desc(waldStat)) %>% 
                                                                            dplyr::select(gene_id, pw_comparison)), 
-                                                          stage_nms = names(asx_pairwise_mkrs_seu_clustr_sst), 
+                                                          stage_nms = names(fm_pairwise_mkrs_seu_clustr_sst), 
                                                           ptimes = pts_sst,
                                                           comp_g = 'pw_comparison',
                                                           top_gns = 10)
@@ -2418,12 +2439,12 @@ fld_lab_de
 
 ```{r}
 top_sig_gns_plts <- stg_strn_mast_gns_smooth_plts(gn_xprsn_tbls = c( gn_tble_gg_smoother), 
-                                                  gns_strn = map(asx_pairwise_mkrs_seu_clustr_sst, 
+                                                  gns_strn = map(fm_pairwise_mkrs_seu_clustr_sst, 
                                                                  . %>%
                                                                    filter(p_val_adj < 10e-20 & (avg_log2FC > 1 | avg_log2FC < -1))  %>% 
                                                                    arrange(p_val_adj) %>%
                                                                    dplyr::select(gene_id, pw_comparison)), 
-                                                  stage_nms = names(asx_pairwise_mkrs_seu_clustr_sst), 
+                                                  stage_nms = names(fm_pairwise_mkrs_seu_clustr_sst), 
                                                   comp_g = 'pw_comparison',
                                                   ptimes = pts_sst,
                                                   top_gns = 10)
@@ -2435,8 +2456,8 @@ stg_strn_mast_gns_smooth_plts_saver(plts_cnm =  'top_sig_gns_plts', plt_lst = to
 Save top significant pairwise strain DE genes by MAST adjusted p value (<10e-20)
 ```{r, fig.width=16, fig.height=8}
                                    
-p2 =EnhancedVolcano(asx_pairwise_mkrs_seu_clustr_sst[[15]] %>% filter(pw_comparison == 'SC2_vs_SC7'),
-                    lab = left_join(asx_pairwise_mkrs_seu_clustr_sst[[15]], Pf3D7_genes_plasmoDB, by = 'gene_id')%>% filter(pw_comparison == 'SC2_vs_SC7') %>% pull(Gene),
+p2 =EnhancedVolcano(fm_pairwise_mkrs_seu_clustr_sst[[15]] %>% filter(pw_comparison == 'SC2_vs_SC7'),
+                    lab = left_join(fm_pairwise_mkrs_seu_clustr_sst[[15]], Pf3D7_genes_plasmoDB, by = 'gene_id')%>% filter(pw_comparison == 'SC2_vs_SC7') %>% pull(Gene),
                     x = 'avg_log2FC',
                     y = 'p_val_adj',
                     hline = c(10e-10),
@@ -2450,8 +2471,8 @@ p2 =EnhancedVolcano(asx_pairwise_mkrs_seu_clustr_sst[[15]] %>% filter(pw_compari
                     subtitleLabSize = 0,
                     legendLabels =c(expression(Log[2] ~ FC), "p-value"))
 
-p3 =EnhancedVolcano(asx_pairwise_mkrs_seu_clustr_sst[[15]] %>% filter(pw_comparison == 'SC5_vs_SC7'),
-                    lab = left_join(asx_pairwise_mkrs_seu_clustr_sst[[15]], Pf3D7_genes_plasmoDB, by = 'gene_id')%>% filter(pw_comparison == 'SC5_vs_SC7') %>% pull(Gene),
+p3 =EnhancedVolcano(fm_pairwise_mkrs_seu_clustr_sst[[15]] %>% filter(pw_comparison == 'SC5_vs_SC7'),
+                    lab = left_join(fm_pairwise_mkrs_seu_clustr_sst[[15]], Pf3D7_genes_plasmoDB, by = 'gene_id')%>% filter(pw_comparison == 'SC5_vs_SC7') %>% pull(Gene),
                     x = 'avg_log2FC',
                     y = 'p_val_adj',
                     hline = c(10e-10),
@@ -2475,7 +2496,7 @@ venn diagram overlap in genes upregulated in first strain versus the second
 ```{r, fig.width= 8, fig.height=3}
 
 # strns_comps =  c('SC2_vs_SC5', 'SC2_vs_SC7', 'SC5_vs_SC7')
-list(asx_pairwise_mkrs_seu_clustr_sst[11:14]) %>%
+list(fm_pairwise_mkrs_seu_clustr_sst[11:14]) %>%
   pmap(., ~{
     mast_de_tbl = ..1
     map(strns_comps, ~ mast_de_tbl %>% 
@@ -2819,7 +2840,7 @@ msc_g_noLE_v3_combi_strn_mast[[13]]@meta.data %>% dplyr::count(lf_strain)
 
 ```{r}
 ##save as RDS object to be able to add the GO analysis in the functional_GO_n_lit_comparison.Rmd notebook
-saveRDS(all_labvfld_hms[1:8], 'plots/mali2021_all/DE_heatmaps/all_labvfld_hms_fvl.RDS')
+saveRDS(all_labvfld_hms[1:8], paste0(save_dir, "all_labvfld_hms_fvl.RDS"))
 
 ```     
                
@@ -3414,12 +3435,12 @@ Visualize
 ```{r, eval=FALSE}
 ## !! NB takes looooong
 border_sig_gns_plts <- stg_strn_mast_gns_smooth_plts(gn_xprsn_tbls = c(gn_tble_gg_smoother), 
-                                                     gns_strn = map(asx_pairwise_mkrs_seu_clustr_sst, 
+                                                     gns_strn = map(fm_pairwise_mkrs_seu_clustr_sst, 
                                                                     . %>%
                                                                       filter(p_val_adj < 0.05 & p_val_adj > 10e-4)  %>% 
                                                                       arrange(p_val_adj) %>%
                                                                       dplyr::select(gene_id, pw_comparison)), 
-                                                     stage_nms = names(asx_pairwise_mkrs_seu_clustr_sst), 
+                                                     stage_nms = names(fm_pairwise_mkrs_seu_clustr_sst), 
                                                      comp_g = 'pw_comparison',
                                                      ptimes = pts_sst,
                                                      top_gns = 10)
