--- a/10_integration/all_integrated_scvi_object_cleanup_2remove_misplaced_clusters.Rmd
+++ b/10_integration/all_integrated_scvi_object_cleanup_2remove_misplaced_clusters.Rmd
@@ -101,7 +101,7 @@ source("/nfs/users/nfs_j/jr35/Mali2/mali22_code/pf_common_vars.R")
 # read_dir <- "data/processed/Pf/m2_all/scvi2seu/"
 read_dir_scvi2seu <- "data/processed/Pf/m2_all/scvi2seu/"
 
-save_dir_integrated_scvi_cleanup <- "data/processed/Pf/m2_all/integrated_scvi_cleanup/"
+save_dir_integration <- "data/processed/Pf/m2_all/integration/"
 
 
 published_dset_dir <- "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/published_dsets/"
@@ -267,7 +267,7 @@ all_jcC_seu_scvi_stg_noM55_afm_cln_no_cluster_misplaced_cells <- subset(all_jcC_
 
 
 ```{r, eval=T}
-saveRDS(all_jcC_seu_scvi_stg_noM55_afm_cln_no_cluster_misplaced_cells, paste0(save_dir_integrated_scvi_cleanup, 'all_jcC_seu_scvi_stg_noM55_afm_cln_no_cluster_misplaced_cells.RDS'))
+saveRDS(all_jcC_seu_scvi_stg_noM55_afm_cln_no_cluster_misplaced_cells, paste0(save_dir_integration, 'all_jcC_seu_scvi_stg_noM55_afm_cln_no_cluster_misplaced_cells.RDS'))
 
 ```
 
