--- a/10_integration/scvi_leiden_clusters_doublet_investigations.Rmd
+++ b/10_integration/scvi_leiden_clusters_doublet_investigations.Rmd
@@ -85,9 +85,9 @@ published_dset_dir <- "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/pub
 
 read_dir_scvi2seu <- "data/processed/Pf/m2_all/scvi2seu/"
 read_dir_stage_DE_markers <- "data/processed/Pf/m2_all/stage_DE_markers/"
-read_dir_integrated_scvi_cleanup <- "data/processed/Pf/m2_all/integrated_scvi_cleanup/"
+read_dir_integration <- "data/processed/Pf/m2_all/integration/"
 
-save_dir_integrated_scvi_cleanup <- "data/processed/Pf/m2_all/integrated_scvi_cleanup/"
+save_dir_integration <- "data/processed/Pf/m2_all/integration/"
 
 
 ```
@@ -118,7 +118,7 @@ source("/nfs/users/nfs_j/jr35/Mali2/mali22_code/pf_common_vars.R")
 
 ```{r, eval=T}
 ## Read the scvi integrated object with misplaced clusters of less than 1% in asexual, male and female stages removed
-all_jcC_scvi_noM55_no_cluster_misplaced_cells <- readRDS(paste0(read_dir_integrated_scvi_cleanup, 'all_jcC_seu_scvi_stg_noM55_afm_cln_no_cluster_misplaced_cells.RDS'))
+all_jcC_scvi_noM55_no_cluster_misplaced_cells <- readRDS(paste0(read_dir_integration, 'all_jcC_seu_scvi_stg_noM55_afm_cln_no_cluster_misplaced_cells.RDS'))
 
 ```
 
@@ -200,13 +200,13 @@ wilcox_scviLeiden_markers_4DbtDetection_anot <- map(wilcox_scviLeiden_markers_4D
 
 
 ```{r, eval=T}
-saveRDS(wilcox_scviLeiden_markers_4DbtDetection_anot, paste0(save_dir_integrated_scvi_cleanup, 'wilcox_scviLeiden_markers_4DbtDetection_anot.RDS'))
+saveRDS(wilcox_scviLeiden_markers_4DbtDetection_anot, paste0(save_dir_integration, 'wilcox_scviLeiden_markers_4DbtDetection_anot.RDS'))
 
 ```
 
 ```{r, eval=T}
 ## Read in DE results to avoid recalculating
-wilcox_scviLeiden_markers_4DbtDetection_anot <- readRDS(paste0(save_dir_integrated_scvi_cleanup, 'wilcox_scviLeiden_markers_4DbtDetection_anot.RDS'))
+wilcox_scviLeiden_markers_4DbtDetection_anot <- readRDS(paste0(save_dir_integration, 'wilcox_scviLeiden_markers_4DbtDetection_anot.RDS'))
 
 ```
 
@@ -404,13 +404,13 @@ all_jcC_seu_scvi_stg_noM55_afm_ActivAsexDbts <- map(all_jcC_seu_scvi_stg_noM55_a
 
 ```{r}
 # save the overal object with activated+asex doublet annotation
-saveRDS(all_jcC_seu_scvi_stg_noM55_afm_ActivAsexDbts, paste0(save_dir_integrated_scvi_cleanup, "all_jcC_seu_scvi_stg_noM55_afm_ActivAsexDbts.RDS"))
-saveRDS(all_jcC_seu_scvi_stg_noM55_afm_ActivAsexDbts[[1]], paste0(save_dir_integrated_scvi_cleanup, "all_jcC_seu_scvi_stg_noM55_ActivAsexDbts.RDS"))
+saveRDS(all_jcC_seu_scvi_stg_noM55_afm_ActivAsexDbts, paste0(save_dir_integration, "all_jcC_seu_scvi_stg_noM55_afm_ActivAsexDbts.RDS"))
+saveRDS(all_jcC_seu_scvi_stg_noM55_afm_ActivAsexDbts[[1]], paste0(save_dir_integration, "all_jcC_seu_scvi_stg_noM55_ActivAsexDbts.RDS"))
 
 ```
 
 ```{r}
-saveRDS(tbl_umap_gn_asx_hires_stages, paste0(save_dir_integrated_scvi_cleanup, "tbl_umap_gn_asx_hires_stages.RDS"))
+saveRDS(tbl_umap_gn_asx_hires_stages, paste0(save_dir_integration, "tbl_umap_gn_asx_hires_stages.RDS"))
 
 ```
 
@@ -423,7 +423,7 @@ all_jcC_seu_scvi_noM55_afm_cln <- map(all_jcC_seu_scvi_stg_noM55_afm_ActivAsexDb
 
 ```{r}
 # save the overal object with activated+asex doublet annotation
-saveRDS(all_jcC_seu_scvi_noM55_afm_cln, paste0(save_dir_integrated_scvi_cleanup, "all_jcC_seu_scvi_noM55_afm_cln.RDS"))
+saveRDS(all_jcC_seu_scvi_noM55_afm_cln, paste0(save_dir_integration, "all_jcC_seu_scvi_noM55_afm_cln.RDS"))
 
 ```
 
