--- a/10_integration/m22_raw_integration_fm.Rmd
+++ b/10_integration/m22_raw_integration_fm.Rmd
@@ -123,17 +123,50 @@ VlnPlot(all_jcC_seu_scvi_noM55, features = "nFeature_RNA", group.by = "stage_fld
 ```{r, warning=FALSE, message=FALSE}
 VlnPlot(all_jcC_seu_scvi_noM55, features = "nFeature_RNA", group.by = "leiden", pt.size = 0) + geom_hline(yintercept = c(200, 400, 500, 1000))
 ```
+########################## START - Add metadata for asexual like female cells ##########################
+
+```{r}
+# generated in 'scvi_leiden_clusters_seuratDE.Rmd' using these asexual markers c("PF3D7-0831700", "PF3D7-0501300", "PF3D7-0202000", "PF3D7-0113000", "PF3D7-1372200", "PF3D7-1401400", "PF3D7-1001500") - go to that notebook for more details
+tbl_umap_gn_asx_hires_stages <- readRDS("data/processed/Pf/m2_all/scvi2seu/tbl_umap_gn_asx_hires_stages.RDS") %>% 
+  select(c("bcode", "stage_fld", "PF3D7-0831700", "PF3D7-0501300", "PF3D7-0202000", "PF3D7-0113000", "PF3D7-1372200", "PF3D7-1401400", "PF3D7-1001500", "mean_asx_gns", "sum_asx_gns", "fem_asx_dblt_mean", "fem_asx_dblt_sum", "stage_scvi_hires_fem")) %>%
+  mutate(fem_dbt_status = case_when(stage_scvi_hires_fem == "fem8_asx_dblt" ~ "likely_asexual_doublet",
+                   T ~ "not_asex_dbt"))
+
+
+```
+
+```{r}
+tbl_umap_gn_asx_hires_stages %>% count(stage_scvi_hires_fem, fem_dbt_status)
+```
+
+
+```{r}
+all_jcC_seu_scvi_noM55 <- AddMetaData(all_jcC_seu_scvi_noM55, tbl_umap_gn_asx_hires_stages %>% select(bcode, fem_dbt_status) %>% column_to_rownames('bcode'))
+                                  
+```
+
+```{r}
+DimPlot(all_jcC_seu_scvi_noM55, reduction = "scvi_umap", group.by = "fem_dbt_status", label = T)
+```
+
+```{r}
+## KAHRP
+FeaturePlot(all_jcC_seu_scvi_noM55, reduction = "scvi_umap", features = "PF3D7-0202000", label = T, slot = "counts", order = T)
+```
+########################## END - Add metadata for asexual like female cells ##########################
 
 ```{r}
 all_seu_scvi_fem <- all_jcC_seu_scvi_noM55[, all_jcC_seu_scvi_noM55$stage_fld  == "Female"]
 all_seu_scvi_femLE <- all_jcC_seu_scvi_noM55[, all_jcC_seu_scvi_noM55$stage_fld  == "Female (LE)"]
 all_seu_scvi_male <- all_jcC_seu_scvi_noM55[, all_jcC_seu_scvi_noM55$stage_fld  == "Male"]
 all_seu_scvi_maleLE <- all_jcC_seu_scvi_noM55[, all_jcC_seu_scvi_noM55$stage_fld  == "Male (LE)"]
+all_seu_scvi_fem_femLE <- all_jcC_seu_scvi_noM55[, all_jcC_seu_scvi_noM55$stage_fld %in% c("Female", "Female (LE)")]
+all_seu_scvi_male_maleLE <- all_jcC_seu_scvi_noM55[, all_jcC_seu_scvi_noM55$stage_fld %in% c("Male", "Male (LE)")]
 
 ```
 
 ```{r}
-all_seu_scvi_fm <- list(all_seu_scvi_fem, all_seu_scvi_femLE, all_seu_scvi_male, all_seu_scvi_maleLE) %>% set_names(c("f", "fLE", "m", "mLE"))
+all_seu_scvi_fm <- list(all_seu_scvi_fem, all_seu_scvi_femLE, all_seu_scvi_male, all_seu_scvi_maleLE, all_seu_scvi_fem_femLE, all_seu_scvi_male_maleLE) %>% set_names(c("f", "fLE", "m", "mLE", "f_fLE", "m_mLE"))
 
 ```
 
@@ -149,13 +182,14 @@ map(all_seu_scvi_fm, ~.x@meta.data %>% count(leiden) %>% arrange(desc(n)))
 
 
 ```{r}
-clstrs2keep <- list(c(2, 4, 8, 9, 10, 14, 15), c(3), c(0, 6, 11), c(11))
+clstrs2keep <- list(c(2, 4, 8, 9, 10, 14, 15), c(3), c(0, 6, 11), c(11), c(2, 4, 8, 9, 10, 14, 15, 3), c(0, 6, 11))
 ```
 
 ```{r}
 ## Subset clusters that correlate with stage. I.e remove clusters that group together with non-interest clusters
 all_seu_scvi_fm_cln <- map2(all_seu_scvi_fm, clstrs2keep, ~subset(.x, subset = leiden %in% .y))
 ```
+
 
 ```{r}
 map(all_seu_scvi_fm_cln, ~DimPlot(.x, reduction = "scvi_umap", group.by = "leiden", label = T))
@@ -264,13 +298,16 @@ donor_counts_in_leiden0.7
 donor_counts_in_leiden0.5 <- map(donor_counts_in_leiden_clusters, ~.x %>% filter(don_prop >= 0.5) %>% pull(leiden) %>% unique())
 donor_counts_in_leiden0.5
 
+donor_counts_in_leiden0.4 <- map(donor_counts_in_leiden_clusters, ~.x %>% filter(don_prop >= 0.4) %>% pull(leiden) %>% unique())
+donor_counts_in_leiden0.4
+
 donor_counts_in_leiden_all <- map(donor_counts_in_leiden_clusters, ~.x %>% pull(leiden) %>% unique())
 donor_counts_in_leiden_all
 ```
 
 ```{r}
 ## Keep only unique cluster sets across the lists
-lists <- list(donor_counts_in_leiden_all, donor_counts_in_leiden0.7, donor_counts_in_leiden0.5)
+lists <- list(donor_counts_in_leiden_all, donor_counts_in_leiden0.7, donor_counts_in_leiden0.5, donor_counts_in_leiden0.4)
 
 seen <- character()
 
@@ -280,7 +317,7 @@ dedup_lists <- lapply(lists, function(x) {
   x[keep]
 })
 
-names(dedup_lists) <- c("all", "w.7", "w.5")
+names(dedup_lists) <- c("all", "w.7", "w.5", "w.4")
 
 dedup_lists <- unlist(dedup_lists, recursive = F)
 dedup_lists
@@ -294,12 +331,39 @@ fm_leiden_w_donors <- imap(dedup_lists, ~subset(all_seu_scvi_fm_cln[[str_extract
 
 
 ```{r}
-map(fm_leiden_w_donors, ~DimPlot(.x, reduction = "scvi_umap", group.by = "leiden", label = T))
+imap(fm_leiden_w_donors, ~DimPlot(.x, reduction = "scvi_umap", group.by = "leiden", label = T) + labs(title = .y))
+```
+
+########################## START - Add a version of the female object with the asexual like cells removed ##########################
+
+```{r}
+## remove asex like females from objects
+objs_to_rm_asex <- c("w.5.f", "w.5.f_fLE")
+
+fm_leiden_w_donors_wout_asex_dbt <- map(fm_leiden_w_donors[objs_to_rm_asex], ~subset(.x, subset = fem_dbt_status != "likely_asexual_doublet")) %>% set_names(paste0(objs_to_rm_asex, "_no_asx_dbt"))
+
+```
+
+
+```{r}
+## append to previous list 
+fm_leiden_w_donors[paste0(objs_to_rm_asex, "_no_asx_dbt")] <- fm_leiden_w_donors_wout_asex_dbt
+
 ```
 
 ```{r}
+imap(fm_leiden_w_donors, ~DimPlot(.x, reduction = "scvi_umap", group.by = "fem_dbt_status", label = T) + labs(title = .y))
+
+```
+
+
+########################## END - Add a version of the female object with the asexual like cells removed ##########################
+
+Asses outlier cells below
+
+```{r}
 ## assess cells above 99% quantile for UMI count
-map(fm_leiden_w_donors, ~VlnPlot(.x, features = "nCount_RNA", group.by = "leiden") + geom_hline(yintercept = quantile(.x$nCount_RNA, probs = c(0.01, 0.99))))
+map(fm_leiden_w_donors, ~VlnPlot(.x, features = "nCount_RNA", group.by = "leiden", split.by = "stage_fld") + geom_hline(yintercept = quantile(.x$nCount_RNA, probs = c(0.01, 0.99))))
 ```
 
 ```{r}
@@ -324,6 +388,12 @@ map(fm_leiden_w_donors, ~VlnPlot(.x, features = "nFeature_RNA", group.by = "leid
 map(fm_leiden_w_donors, ~.x@meta.data %>% count(orig.ident, don_count))
 ```
 
+
+
+
+
+
+
 ```{r}
 ## remove any donor with less than 100 cells
 fm_leiden_w_donors <- map(fm_leiden_w_donors, ~.x[, !.x@meta.data$don_count < 100])
@@ -341,7 +411,7 @@ imap(fm_leiden_w_donors, ~saveRDS(.x, paste0("data/processed/Pf/m2_all/integrati
 gogo()
 # bsub < /lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/mali22_code_lnk/bash_scripts/submsn_seu_norm_integration_bsub.sh
 
-# --input_seu "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/data/processed/Pf/m2_all/integration/fm_leiden_w_donors_*.f.RDS" \
+# --input_seu "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/data/processed/Pf/m2_all/integration/fm_leiden_w_donors_*.{f,f_fLE,f_no_asx_dbt,f_fLE_no_asx_dbt}.RDS" \
 # --hvg 900 --cluster_resoln 0.1 --cl_nm "seurat_clusters" --integrtd_pc30 "no" \
 # --ncores "5" --mem "50 GB" --run_time="55.min" \
 
@@ -349,7 +419,7 @@ gogo()
 # --hvg 500 --cluster_resoln 0.1 --cl_nm "seurat_clusters" --integrtd_pc30 "no" \
 # --ncores "5" --mem "50 GB" --run_time="55.min" \
 
-# --input_seu "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/data/processed/Pf/m2_all/integration/fm_leiden_w_donors_*.m.RDS" \
+# --input_seu "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/data/processed/Pf/m2_all/integration/fm_leiden_w_donors_*.{m,m_mLE}.RDS" \
 # --hvg 700 --cluster_resoln 0.1 --cl_nm "seurat_clusters" --integrtd_pc30 "no" \
 # --ncores "5" --mem "50 GB" --run_time="55.min" \
 ```
@@ -359,7 +429,7 @@ gogo()
 # bsub < /lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/mali22_code_lnk/bash_scripts/submsn_intgrtn_pc_harmony_bsub.sh
 
 # --input_seu "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/data/processed/Pf/m2_all/integration/fm_leiden_w_donors_*_norm.RDS" \
-# --mthd_nm "harmony_PC_man" --cluster_resoln 0.3 --intgrtn_pc 86 --integrtd_pc_man "yes" \
+# --mthd_nm "harmony_PC_man" --cluster_resoln 0.3 --intgrtn_pc 8 --integrtd_pc_man "yes" \
 # --ncores "5" --mem "40 GB" --run_time="1.hour" \
 ```
 
@@ -424,7 +494,42 @@ fm_leiden_w_donors_norm_harmony[[3]]@meta.data %>% count(orig.ident)
 
 
 ```{r, warning=FALSE, message=FALSE}
-imap(fm_leiden_w_donors_norm_harmony, ~DimPlot(.x, group.by = "leiden", reduction = "umap.harmony_PC_man")+ labs(title = .y))
+imap(fm_leiden_w_donors_norm_harmony, ~DimPlot(.x, group.by = "leiden", reduction = "umap.harmony_PC_man", label = T)+ labs(title = .y))
+
+```
+
+
+```{r, warning=FALSE, message=FALSE, eval=T}
+# Display the combined datasets as an interactive 3D plot
+
+plot_ly(data = data.frame(fm_leiden_w_donors_norm_harmony[["w.5.f_fLE_no_asx_dbt"]]@reductions[["umap.harmony_PC_man"]]@cell.embeddings),
+        x = ~umapharmonyPCman_1, y = ~umapharmonyPCman_2, z = ~umapharmonyPCman_3,
+        color= fm_leiden_w_donors_norm_harmony[["w.5.f_fLE_no_asx_dbt"]]@meta.data$stage_fld,
+        # colors = c('blue', 'red'),
+        opacity = 0.8,
+        size = 0.1, 
+        type = 'scatter3d'
+)
+
+```
+
+
+```{r, warning=FALSE, message=FALSE, eval=T}
+# Display the combined datasets as an interactive 3D plot
+
+plot_ly(data = data.frame(fm_leiden_w_donors_norm_harmony[["w.5.f_fLE"]]@reductions[["umap.harmony_PC_man"]]@cell.embeddings),
+        x = ~umapharmonyPCman_1, y = ~umapharmonyPCman_2, z = ~umapharmonyPCman_3,
+        color= base::as.factor(fm_leiden_w_donors_norm_harmony[["w.5.f_fLE"]]@meta.data$leiden),
+        # colors = c('blue', 'red'),
+        opacity = 0.8,
+        size = 0.1, 
+        type = 'scatter3d'
+)
+
+```
+
+```{r, warning=FALSE, message=FALSE}
+imap(fm_leiden_w_donors_norm_harmony, ~DimPlot(.x, label = T, reduction = "integrated.harmony_PC_man", group.by = "leiden", dims = c(1,2)) + labs(title = .y))
 
 ```
 
@@ -515,6 +620,28 @@ map(fm_leiden_w_donors_norm_harmony_jnd, ~unique(Idents(.x)))
 
 
 ```{r, warning=FALSE, message=FALSE}
-imap(fm_leiden_w_donors_norm_harmony_jnd, ~saveRDS(., paste0("data/processed/Pf/m2_all/fm_leiden_w_donors_", .y,"_norm_harmony_jnd.RDS")))
+imap(fm_leiden_w_donors_norm_harmony_jnd, ~saveRDS(., paste0("data/processed/Pf/m2_all/integration/fm_leiden_w_donors_", .y,"_norm_harmony_jnd.RDS")))
 
 ```
+
+
+```{r, warning=FALSE, message=FALSE}
+# Combined metadata and umap embeddings for figure generation
+fm_leiden_w_donors_norm_harmony_jnd_umap_mdata <- map(fm_leiden_w_donors_norm_harmony_jnd_all, ~{
+  .x@meta.data %>% 
+    rownames_to_column("bcode") %>%
+      left_join(., .x@reductions$umap.harmony_PC_man@cell.embeddings %>% data.frame() %>% rownames_to_column("bcode"), by = "bcode") 
+})
+```
+
+```{r, warning=FALSE, message=FALSE}
+fm_leiden_w_donors_norm_harmony_jnd_umap_mdata <- fm_leiden_w_donors_norm_harmony_jnd_umap_mdata %>% 
+  set_names(str_replace_all(names(fm_leiden_w_donors_norm_harmony_jnd_umap_mdata), c("w\\." = "w_pt", "\\." = "_")))
+```
+
+```{r}
+# Save for figure generation
+imap(fm_leiden_w_donors_norm_harmony_jnd_umap_mdata, ~saveRDS(.x, paste0("data/processed/Pf/m2_all/integration/fm_leiden_w_donors_norm_harmony_jnd_", .y, "_umap_mdata.RDS")))
+
+```
+
